[package]
name = "front-helper"
version = "0.1.0"
authors = ["longyun <ly1169134156@163.com>"]
edition = "2018"
description = "A tool to help front works"
homepage = "https://github.com/Lynss/front-helper"
repository = "https://github.com/Lynss/front-helper"
keywords = ["cli", "front-helper", "taro"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.4"
failure = "0.1.6"
exitfailure = "0.5.1"
indicatif = "0.13.0"
human-panic = "1.0.1"
env_logger = "0.7.1"
dotenv = "0.15.0"
log = "0.4.8"
serde = "1.0.102"
serde_json = "1.0.41"
string_template = "0.2.1"
regex = "1.3.1"
Inflector = "0.11.4"
exitcode = "1.1.2"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1"
tempfile = "3.1.0"
